--- a/erp/Vagrantfile
+++ b/erp/Vagrantfile
@@ -6,18 +6,59 @@
 # backwards compatibility). Please don't change it unless you know what
 # you're doing.
 
-$type="openbravo"
-$files = "/work/files/erp"
-        
+require 'yaml'
+require 'fileutils'
+
+$job="erp"
+
+$instance="openbravo"  
+$prex = "openbravo"
+
+$job_modules = "/work/puppet/vagrant/#{$job}/modules"
+
+$shared_folders= {
+    "hiera"  => {"host"=> "./puppet/hiera","guest"=>"/tmp/vagrant-puppet/hiera", "type"=>"basic"},
+    "facter" => {"host"=> "./puppet/facter","guest"=>"/tmp/vagrant-puppet/facter", "type"=>"basic"},
+    "job"    => {"host"=> "/work/files/#{$job}","guest"=>"/job", "type"=>"basic", "options"=>['dmode=777,fmode=777']},
+    "odoo"   => {"host"=> "/work/lang/odoo","guest"=>"/job/odoo", "type"=>"nfs"},
+}
+
+$modules = []
+if File.directory?($job_modules )
+  $modules.push($job_modules)
+end   
+$modules.push("/work/puppet/modules")
+
+vagrant_dir = File.expand_path(File.dirname(__FILE__))
+servers = YAML.load_file(File.join(File.dirname(__FILE__), "#{$instance}.yml"))
+
 Vagrant.configure(2) do |config|
   # The most common configuration options are documented and commented below.
   # For a complete reference, please see the online documentation at
   # https://docs.vagrantup.com.
   
+  servers.each do |servers|
+    if !servers["enable"].nil? && servers["enable"]===0    
+       next
+    end
+
+    config.vm.define servers["name"] do |srv|
+      srv.vm.box_check_update = false
+      srv.vm.hostname = "#{$prex}#{servers['name']}.max.com"
+      srv.vm.box = servers["box"]
+      srv.vm.network "private_network", ip: servers["priv_ip"]
+      srv.vm.provider "virtualbox" do |vb|
+         vb.name = "#{$instance}-dev-#{servers['name']}"  
+         vb.memory = servers["ram"]
+         vb.cpus = servers["vcpu"]
+      end    
+    end
+  end
+  
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://atlas.hashicorp.com/search.
-  config.vm.box = "max/ubuntu14"
-  config.vm.hostname = "erp.max.com"
+  # config.vm.box = "max/ubuntu14"
+  # config.vm.hostname = "erp.max.com"
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
   # `vagrant box outdated`. This is not recommended.
@@ -30,7 +71,7 @@ Vagrant.configure(2) do |config|
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
-   config.vm.network "private_network", ip: "192.168.56.17"
+  # config.vm.network "private_network", ip: "192.168.56.17"
 
   # Create a public network, which generally matched to bridged network.
   # Bridged networks make the machine appear as another physical device on
@@ -40,27 +81,31 @@ Vagrant.configure(2) do |config|
   # Share an additional folder to the guest VM. The first argument is
   # the path on the host to the actual folder. The second argument is
   # the path on the guest to mount the folder. And the optional third
-  # argument is a set of non-required options.
-   config.vm.synced_folder "./puppet/hiera", "/var/lib/hiera"
-   config.vm.synced_folder "./puppet/facter", "/etc/facter"
-
-   config.vm.synced_folder $files, "/job"
-   config.vm.synced_folder "/work/lang/odoo", "/job/odoo"
-   #config.vm.synced_folder "./shell", "/job/shell", id: "vagrant-root", owner: "vagrant",group: "vagrant",mount_options: ["dmode=0777,fmode=0777"]
+  # argument is a set of non-required options. 
+  
+  $shared_folders.each do |key, value|
+	    if value['type'] == "nfs" 
+	       mount_options =   value['options'].nil? ? ['nolock,vers=3,udp'] : value['options'] 
+           config.vm.synced_folder value['host'], value['guest'], id: key, nfs: true, mount_options: mount_options
+        elsif value['type'] == "basic"
+           mount_options =  value['options'].nil? ? [] : value['options'] 
+           config.vm.synced_folder value['host'], value['guest'], mount_options:mount_options
+        end
+  end
 
   # Provider-specific configuration so you can fine-tune various
   # backing providers for Vagrant. These expose provider-specific options.
   # Example for VirtualBox:
   #
-     config.vm.provider "virtualbox" do |vb|
+  #   config.vm.provider "virtualbox" do |vb|
   #   # Display the VirtualBox GUI when booting the machine
-      vb.name = "erp-dev"
+  #    vb.name = "erp-dev"
   #   vb.gui = true
   #
   #   # Customize the amount of memory on the VM:
-      vb.memory = "2048"
-      vb.cpus = 2
-   end
+  #    vb.memory = "2048"
+  #    vb.cpus = 2
+  # end
   #
   # View the documentation for the provider you are using for more
   # information on available options.
@@ -78,16 +123,17 @@ Vagrant.configure(2) do |config|
   # config.vm.provision "shell", inline <<-SHELL
   #   sudo apt-get install apache2
   # SHELL
-   #config.puppet_install.puppet_version = "3.7"
-   config.vm.provision "shell", path: "./shell/base.sh"
-   #config.vm.provision "shell", path: "./shell/python.sh"
+   
+   config.vm.provision :shell, path: "provision/base.sh"
+   config.vm.provision :shell, path: "provision/remove_puppet_unless_modern.sh" 
+   config.vm.provision :shell, path: "provision/install_puppet_on_ubuntu.sh"
+     
    config.vm.provision :puppet do |puppet|
         puppet.manifests_path = "puppet/manifests"
-        puppet.manifest_file  = $type+".pp"
-         #puppet.module_path = "puppet/modules"
-        puppet.module_path = "/work/puppet/modules"
-        puppet.hiera_config_path = "puppet/hiera.yaml"
-        puppet.options = "--parser future --verbose --debug "        
-     
-    end
+        puppet.manifest_file  = "#{$instance}.pp"
+        puppet.module_path = $modules
+        puppet.hiera_config_path = "puppet/hiera/hiera.yaml"
+        puppet.working_directory = "/tmp/vagrant-puppet/"
+        puppet.options = "--parser future --verbose --debug "       
+   end
 end
