--- a/erp/Vagrantfile
+++ b/erp/Vagrantfile
@@ -11,8 +11,8 @@ require 'fileutils'
 
 $job="erp"
 
-$instance="openbravo"  
-$prex = "openbravo"
+$instance="adempiere"  
+$prex = "adempiere"
 
 $job_modules = "/work/puppet/vagrant/#{$job}/modules"
 
@@ -20,7 +20,7 @@ $shared_folders= {
     "hiera"  => {"host"=> "./puppet/hiera","guest"=>"/tmp/vagrant-puppet/hiera", "type"=>"basic"},
     "facter" => {"host"=> "./puppet/facter","guest"=>"/tmp/vagrant-puppet/facter", "type"=>"basic"},
     "job"    => {"host"=> "/work/files/#{$job}","guest"=>"/job", "type"=>"basic", "options"=>['dmode=777,fmode=777']},
-    "odoo"   => {"host"=> "/work/lang/odoo","guest"=>"/job/odoo", "type"=>"nfs"},
+    "erp"   => {"host"=> "/work/ERP","guest"=>"/job/erp", "type"=>"nfs"},
 }
 
 $modules = []
@@ -51,7 +51,34 @@ Vagrant.configure(2) do |config|
          vb.name = "#{$instance}-dev-#{servers['name']}"  
          vb.memory = servers["ram"]
          vb.cpus = servers["vcpu"]
-      end    
+      end 
+      
+      $shared_folders.each do |key, value|
+	    if value['type'] == "nfs" 
+	       mount_options =   value['options'].nil? ? ['nolock,vers=3,udp'] : value['options'] 
+           srv.vm.synced_folder value['host'], value['guest'], id: key, nfs: true, mount_options: mount_options
+        elsif value['type'] == "basic"
+           mount_options =  value['options'].nil? ? [] : value['options'] 
+           srv.vm.synced_folder value['host'], value['guest'], mount_options:mount_options
+        end
+      end   
+    end
+  end
+  
+  config.vm.define "tomcat" do |tomcat|
+    tomcat.vm.provider "docker" do |d|
+      d.image = "tomcat:7"
+      d.ports=["8080:8080"]
+      d.volumes = ['/work/files/erp/tomcat/webapps/demo:/usr/local/tomcat/webapps/demo']      
+    end
+  end
+  
+  config.vm.define "postgres" do |postgres|
+    postgres.vm.provider "docker" do |d|
+      d.image = "postgres:9.5"
+      d.ports=["5432:5432"]
+      d.env = {'POSTGRES_PASSWORD'=> 'mmmm'}
+      d.volumes = ['/work/files/erp/postgresql/data:/var/lib/postgresql/data']      
     end
   end
   
@@ -83,15 +110,6 @@ Vagrant.configure(2) do |config|
   # the path on the guest to mount the folder. And the optional third
   # argument is a set of non-required options. 
   
-  $shared_folders.each do |key, value|
-	    if value['type'] == "nfs" 
-	       mount_options =   value['options'].nil? ? ['nolock,vers=3,udp'] : value['options'] 
-           config.vm.synced_folder value['host'], value['guest'], id: key, nfs: true, mount_options: mount_options
-        elsif value['type'] == "basic"
-           mount_options =  value['options'].nil? ? [] : value['options'] 
-           config.vm.synced_folder value['host'], value['guest'], mount_options:mount_options
-        end
-  end
 
   # Provider-specific configuration so you can fine-tune various
   # backing providers for Vagrant. These expose provider-specific options.
@@ -134,6 +152,12 @@ Vagrant.configure(2) do |config|
         puppet.module_path = $modules
         puppet.hiera_config_path = "puppet/hiera/hiera.yaml"
         puppet.working_directory = "/tmp/vagrant-puppet/"
-        puppet.options = "--parser future --verbose --debug "       
+        puppet.options = "--parser future --verbose --debug "
+        #puppet.environment_path = "../puppet/environments"
+        #puppet.environment = "testenv"
+        puppet.facter = {
+           "role" => "database",
+           "environment" => "development"
+        }    
    end
 end
