--- a/hadoop/cloudera/Vagrantfile
+++ b/hadoop/cloudera/Vagrantfile
@@ -47,7 +47,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.provision :puppet do |puppet|
         puppet.manifests_path = "puppet/manifests"
         puppet.manifest_file  = "site.pp"
-        puppet.module_path = "/work/puppet/modules"
+        puppet.module_path = "puppet/modules"
         puppet.hiera_config_path = "puppet/hiera.yaml"
         #puppet.working_directory = "/tmp/vagrant-puppet-3"
         #puppet.facter = {
