--- a/hadoop/cloudera/Vagrantfile
+++ b/hadoop/cloudera/Vagrantfile
@@ -14,36 +14,51 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   #config.vm.box = "centos/6"
   #config.vm.box_url = "http://developer.nrel.gov/downloads/vagrant-boxes/CentOS-6.4-x86_64-v20130731.box"
   config.ssh.insert_key = false
+ 
+  #if Vagrant.has_plugin?("vagrant-proxyconf")
+  #  config.proxy.http     = "http://172.17.0.2:3142/"
+  #  config.proxy.https    = false
+  #  config.proxy.no_proxy = "localhost,127.0.0.1,.example.com"
+  #end
   
-
-  config.vm.synced_folder "./puppet/hiera", "/var/lib/hiera"
-  config.vm.synced_folder "./puppet/facter", "/etc/facter"
+  if Vagrant.has_plugin?("vagrant-cachier")
+    config.cache.scope = :box
+  end
   
   config.vm.define :one do |one| 
     one.vm.hostname = "one.cluster"
-    one.vm.network :private_network, ip: "192.168.0.101"
+    one.vm.network :private_network, ip: "192.168.56.121"
     one.vm.provider :virtualbox do |vb|
       vb.customize ["modifyvm", :id, "--memory", 2048]
-    end     
+    end
+    one.vm.provision :hosts, :sync_hosts => true 
   end
 
   config.vm.define :two do |two| 
     two.vm.hostname = "two.cluster"
-    two.vm.network :private_network, ip: "192.168.0.102"
+    two.vm.network :private_network, ip: "192.168.56.122"
     two.vm.provider :virtualbox do |vb|
       vb.customize ["modifyvm", :id, "--memory", 2048]
     end    
+    two.vm.provision :hosts, :sync_hosts => true
   end
 
   config.vm.define :three do |three| 
     three.vm.hostname = "three.cluster"
-    three.vm.network :private_network, ip: "192.168.0.103"
+    three.vm.network :private_network, ip: "192.168.56.123"
     three.vm.provider :virtualbox do |vb|
       vb.customize ["modifyvm", :id, "--memory", 2048]
     end   
+    three.vm.provision :hosts, :sync_hosts => true
   end
   
-  config.vm.provision :shell, :inline => $mirrors_apt
+  
+  config.vm.synced_folder "./puppet/hiera", "/var/lib/hiera"
+  config.vm.synced_folder "./puppet/facter", "/etc/facter"
+  
+  #config.vm.provision :shell, :inline => $mirrors_apt
+  
+  config.vm.provision :shell, path: "shell/base.sh"
   config.vm.provision :puppet do |puppet|
         puppet.manifests_path = "puppet/manifests"
         puppet.manifest_file  = "site.pp"
